// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders button component correctly and has only required props 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="shadow-sm bg-primary-600 border border-primary-600 text-white hover:bg-primary-700 focus:outline outline-primary-200 dark:outline-primary-500 hover:border-primary-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="shadow-sm bg-primary-600 border border-primary-600 text-white hover:bg-primary-700 focus:outline outline-primary-200 dark:outline-primary-500 hover:border-primary-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button renders button component correctly and has only required props 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="shadow-sm bg-primary-600 border border-primary-600 text-white hover:bg-primary-700 focus:outline outline-primary-200 dark:outline-primary-500 hover:border-primary-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="bg-white dark:bg-dark-800 shadow-sm text-gray-800 border border-gray-200 dark:border-dark-600 dark:text-white hover:bg-gray-50 dark:hover:bg-dark-700 focus:outline outline-gray-100 dark:outline-dark-600  py-2.5 px-4 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="bg-white dark:bg-dark-800 shadow-sm text-gray-800 border border-gray-200 dark:border-dark-600 dark:text-white hover:bg-gray-50 dark:hover:bg-dark-700 focus:outline outline-gray-100 dark:outline-dark-600  py-2.5 px-4 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button renders button component correctly and has only required props 3`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="shadow-sm bg-primary-600 border border-primary-600 text-white hover:bg-primary-700 focus:outline outline-primary-200 dark:outline-primary-500 hover:border-primary-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="bg-white dark:bg-dark-800 shadow-sm text-gray-800 border border-gray-200 dark:border-dark-600 dark:text-white hover:bg-gray-50 dark:hover:bg-dark-700 focus:outline outline-gray-100 dark:outline-dark-600  py-2.5 px-4 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="text-primary-600 dark:text-gray-300 border border-primary-600 border-opacity-0 hover:bg-primary-50 dark:hover:bg-dark-600 w-full py-2.5 px-5 font-semibold
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="text-primary-600 dark:text-gray-300 border border-primary-600 border-opacity-0 hover:bg-primary-50 dark:hover:bg-dark-600 w-full py-2.5 px-5 font-semibold
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button renders button component correctly and has only required props 4`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="shadow-sm bg-primary-600 border border-primary-600 text-white hover:bg-primary-700 focus:outline outline-primary-200 dark:outline-primary-500 hover:border-primary-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="bg-white dark:bg-dark-800 shadow-sm text-gray-800 border border-gray-200 dark:border-dark-600 dark:text-white hover:bg-gray-50 dark:hover:bg-dark-700 focus:outline outline-gray-100 dark:outline-dark-600  py-2.5 px-4 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="text-primary-600 dark:text-gray-300 border border-primary-600 border-opacity-0 hover:bg-primary-50 dark:hover:bg-dark-600 w-full py-2.5 px-5 font-semibold
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="text-primary-600 dark:text-white border border-primary-50 dark:border-dark-600 bg-primary-50 dark:bg-dark-600 hover:bg-primary-100 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="text-primary-600 dark:text-white border border-primary-50 dark:border-dark-600 bg-primary-50 dark:bg-dark-600 hover:bg-primary-100 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button renders button component correctly and has only required props 5`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="shadow-sm bg-primary-600 border border-primary-600 text-white hover:bg-primary-700 focus:outline outline-primary-200 dark:outline-primary-500 hover:border-primary-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="bg-white dark:bg-dark-800 shadow-sm text-gray-800 border border-gray-200 dark:border-dark-600 dark:text-white hover:bg-gray-50 dark:hover:bg-dark-700 focus:outline outline-gray-100 dark:outline-dark-600  py-2.5 px-4 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="text-primary-600 dark:text-gray-300 border border-primary-600 border-opacity-0 hover:bg-primary-50 dark:hover:bg-dark-600 w-full py-2.5 px-5 font-semibold
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="text-primary-600 dark:text-white border border-primary-50 dark:border-dark-600 bg-primary-50 dark:bg-dark-600 hover:bg-primary-100 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="text-gray-800 border border-primary-600 border-opacity-0 hover:bg-gray-100 dark:text-white dark:hover:bg-dark-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="text-gray-800 border border-primary-600 border-opacity-0 hover:bg-gray-100 dark:text-white dark:hover:bg-dark-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button renders button component correctly and has only required props 6`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="shadow-sm bg-primary-600 border border-primary-600 text-white hover:bg-primary-700 focus:outline outline-primary-200 dark:outline-primary-500 hover:border-primary-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="bg-white dark:bg-dark-800 shadow-sm text-gray-800 border border-gray-200 dark:border-dark-600 dark:text-white hover:bg-gray-50 dark:hover:bg-dark-700 focus:outline outline-gray-100 dark:outline-dark-600  py-2.5 px-4 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="text-primary-600 dark:text-gray-300 border border-primary-600 border-opacity-0 hover:bg-primary-50 dark:hover:bg-dark-600 w-full py-2.5 px-5 font-semibold
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="text-primary-600 dark:text-white border border-primary-50 dark:border-dark-600 bg-primary-50 dark:bg-dark-600 hover:bg-primary-100 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="text-gray-800 border border-primary-600 border-opacity-0 hover:bg-gray-100 dark:text-white dark:hover:bg-dark-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="shadow-sm bg-error-600 border border-error-600 text-white hover:bg-error-700 focus:outline outline-error-200 dark:outline-error-500 hover:border-error-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="shadow-sm bg-error-600 border border-error-600 text-white hover:bg-error-700 focus:outline outline-error-200 dark:outline-error-500 hover:border-error-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-pointer
                "
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Button renders button component correctly, has required props and tests optional props 1`] = `
<div>
  <button
    class="shadow-sm bg-primary-600 border border-primary-600 text-white hover:bg-primary-700 focus:outline outline-primary-200 dark:outline-primary-500 hover:border-primary-700 w-full py-2 px-3.5 font-semibold text-sm
                flex justify-center items-center gap-x-2.5 rounded-lg whitespace-nowrap
                cursor-not-allowed
                "
    disabled=""
    type="button"
  >
    <svg
      class="stroke-gray-700 dark:stroke-white"
      fill="none"
      height="20"
      viewBox="0 0 24 24"
      width="20"
    >
      <path
        d="M12 5V19M5 12H19"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    Click me
  </button>
</div>
`;
